# blf_lib

./: .gitignore  Cargo.toml  README.MD  README.md  publish.py
blf_cli/: Cargo.toml
blf_cli/src/: commands.rs  console.rs  io.rs  main.rs  result.rs  title_storage.rs
blf_cli/src/commands/: convert_halo3mcc_map_variants.rs  export_variant.rs  import_map_variant.rs  import_rsa_signature.rs  import_rsa_signatures.rs  import_variant.rs  title_storage.rs
blf_cli/src/title_storage/: halo3.rs  halo3odst.rs
blf_cli/src/title_storage/halo3/: release.rs  v12070_08_09_05_2031_halo3_ship.rs
blf_cli/src/title_storage/halo3/release/: blf_files.rs  config_files.rs
blf_cli/src/title_storage/halo3/release/blf_files/: game_set.rs  game_variant.rs  manifest.rs  map_variant.rs  matchmaking_banhammer_messages.rs  matchmaking_hopper.rs  matchmaking_hopper_descriptions.rs  matchmaking_tips.rs  motd.rs  motd_popup.rs  (+2 more)
blf_cli/src/title_storage/halo3/v12070_08_09_05_2031_halo3_ship/: blf_files.rs  motd.rs  rsa_manifest.rs  variant_exporter.rs  variant_importer.rs
blf_cli/src/title_storage/halo3odst/: v13895_09_04_27_2201_atlas_release.rs
blf_cli/src/title_storage/halo3odst/v13895_09_04_27_2201_atlas_release/: blf_files.rs
blf_lib/: Cargo.toml
blf_lib-derive/: Cargo.toml
blf_lib-derive/src/: bincode_packed.rs  helpers.rs  lib.rs  macros.rs
blf_lib-derive/src/bincode_packed/: LICENSE.md  attribute.rs  derive_lib.rs  derive_struct.rs
blf_lib-derive/src/macros/: blf_chunk.rs  blf_file.rs  byte_packed_serializable.rs  chunk_factory.rs  packed_serialize.rs  test_size.rs  title_and_build.rs  unpacked_serializable.rs  version_factory.rs
blf_lib/src/: blam.rs  blf.rs  io.rs  lib.rs  main.rs  types.rs
blf_lib/src/blam/: common.rs  cseries.rs  halo_3.rs  saved_games.rs
blf_lib/src/blam/cache/: cache_files.rs
blf_lib/src/blam/common/: cache.rs  cseries.rs  math.rs  memory.rs  simulation.rs
blf_lib/src/blam/common/cache/: cache_files.rs
blf_lib/src/blam/common/cseries/: language.rs
blf_lib/src/blam/common/math/: integer_math.rs  real_math.rs
blf_lib/src/blam/common/memory/: bitstream.rs  crc.rs  secure_signature.rs
blf_lib/src/blam/common/networking/: transport.rs
blf_lib/src/blam/common/simulation/: simulation_encoding.rs
blf_lib/src/blam/halo3odst/release/: saved_games.rs
blf_lib/src/blam/halo_3/: release.rs
blf_lib/src/blam/halo_3/release/: game.rs
blf_lib/src/blam/math/: integer_math.rs  real_math.rs
blf_lib/src/blam/memory/: bitstream.rs
blf_lib/src/blam/saved_games/: saved_game_files.rs  scenario_map_variant.rs
blf_lib/src/blf/: chunks.rs  s_blf_header.rs  versions.rs
blf_lib/src/blf/chunks/: halo3.rs  halo3odst.rs  haloreach.rs  s_blf_chunk_author.rs  s_blf_chunk_start_of_file.rs
blf_lib/src/blf/chunks/halo3/: v12070_08_09_05_2031_halo3_ship.rs
blf_lib/src/blf/chunks/halo3odst/: v13895_09_04_27_2201_atlas_release.rs
blf_lib/src/blf/chunks/haloreach/: v12065_11_08_24_1738_tu1actual.rs
blf_lib/src/blf/versions/: halo3.rs  halo3odst.rs  haloreach.rs
blf_lib/src/blf/versions/halo3/: v12070_08_09_05_2031_halo3_ship.rs
blf_lib/src/blf/versions/halo3odst/: v13895_09_04_27_2201_atlas_release.rs
blf_lib/src/blf/versions/haloreach/: v12065_11_08_24_1738_tu1actual.rs
blf_lib/src/io/: bitstream.rs  packed_decoding.rs  packed_encoding.rs  packing.rs
blf_lib/src/io/bitstream/: bitstream_reader.rs  bitstream_writer.rs
blf_lib/src/io/packed_decoding/: std.rs
blf_lib/src/io/packed_encoding/: std.rs
blf_lib/src/types/: array.rs  bool.rs  build_number_identifier.rs  byte_limited_utf8_string.rs  byte_limited_wchar_string.rs  byte_order_mark.rs  c_string.rs  chunk_signature.rs  time.rs
(+117 files in other folders)
