[package]
name = "blf_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blf_lib = { path = "../blf_lib", version = "1.4.3" }
clap = { version = "4.5.20", features = ["cargo", "derive"] }
inline_colorization = "0.1.6"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
regex = "1.11.0"
lazy_static = "1.5.0"
csv = "1.3.0"
tempdir = "0.3.7"
tokio = { version = "1.41.0", features = ["rt-multi-thread", 'rt', 'full'] }
num_cpus = "1.16.0"
bimap = "0.6.3"
filesize = "0.2.0"
jpeg-decoder = "0.3.1"