[package]
name = "blf_lib-derive"
description = "Derive macros for blf_lib"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0.79"
quote = "1.0.37"
proc-macro2 = "1.0.86"
blf_lib-derivable = { path = '../blf_lib-derivable', version = "1.4.11" }
