[package]
name = "blf_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
blf_lib-derivable = { path = "../blf_lib-derivable" }
blf_lib-derive = { path = "../blf_lib-derive", optional = true }
serde_json = "1.0.128"
serde = {  version = "1.0.210", features = ["serde_derive"] }
serde-big-array = "0.5.1"
widestring = "1.1.0"
serde-hex = "0.1.0"
hex = "0.4.3"
lazy_static = "1.5.0"
sha1 = "0.10.6"

[features]
default = ["derive"]
derive = ["blf_lib-derive"]