[package]
name = "blf_lib"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
libc = "0.2"
blf_lib-derivable = { path = "../blf_lib-derivable", version = "1.4.4" }
blf_lib-derive = { path = "../blf_lib-derive", optional = true, version = "1.4.4" }
serde_json = "1.0.128"
serde = {  version = "1.0.210", features = ["serde_derive"] }
serde-big-array = "0.5.1"
widestring = "1.1.0"
serde-hex = { git = "https://github.com/Blam-Network/serde-hex.git", version = "0.1.0" }
hex = "0.4.3"
lazy_static = "1.5.0"
sha1 = "0.10.6"
chrono = "0.4.38"
binrw = "0.14.1"
num-traits = "0.2.19"
num-derive = "0.4.2"

[features]
default = ["derive"]
derive = ["blf_lib-derive"]
